# codeorite

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  bandit.yaml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  publish.yml
codeorite/: cli.py  config.py  logging.py  main.py
